# chess-client

./: .gitignore  README.md  pyproject.toml  tasks.py
documentation/: implementation.md  specification.md  testing.md  user_guide.md
documentation/week_reports/: week_1.md  week_2.md  week_3.md  week_4.md  week_5.md  week_6.md
src/: board.py  main.py  move.py  pieces.py  server.py  tables.py
src/tests/: board_test.py  pieces_test.py  server_test.py
